fix bottom margin on mobile

--- a/css/kwokah.webflow.css
+++ b/css/kwokah.webflow.css
@@ -371,11 +371,6 @@ p {
     padding-right: 11px;
     padding-left: 11px;
   }
-
-  .peekignlogo {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
 }
 
 @media screen and (max-width: 479px) {
@@ -412,6 +407,16 @@ p {
 
   .align-right {
     text-align: center;
+  }
+
+  .nocookestext {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .nocooketextbox {
+    width: 60%;
+    padding: 10px;
   }
 }
 
